# elementsd

./: Cargo.toml  README.md  Readme.md  build.rs
.github/workflows/: test.yml
sha256/: SHA256SUMS_0.18.1.12.asc  SHA256SUMS_22.1.1.asc  SHA256SUMS_elements-0.21.0.asc
src/: lib.rs  versions.rs
