[package]
name = "elementsd"
version = "0.1.0"
edition = "2018"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a liquidregtest elements process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/RCasatta/elementsd"
documentation = "https://docs.rs/elementsd/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind = "0.21.0"

[dev-dependencies]
env_logger = "0.8"

[build-dependencies]
ureq = "1.0"  # allows to keep MSRV 1.41.1
bitcoin_hashes = "0.10"
flate2 = "1.0"
tar = "0.4"

[features]
"0_21_0" = []
"0_18_1_12" = []

bitcoind_22_0 = ["bitcoind/22_0"]
bitcoind_0_21_1 = ["bitcoind/0_21_1"]
bitcoind_0_21_0 = ["bitcoind/0_21_0"]
bitcoind_0_20_1 = ["bitcoind/0_20_1"]
bitcoind_0_20_0 = ["bitcoind/0_20_0"]
bitcoind_0_19_1 = ["bitcoind/0_19_1"]
bitcoind_0_19_0_1 = ["bitcoind/0_19_0_1"]
bitcoind_0_18_1 = ["bitcoind/0_18_1"]
bitcoind_0_18_0 = ["bitcoind/0_18_0"]
