[package]
name = "elementsd"
version = "0.9.1"
edition = "2018"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a liquidregtest elements process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/RCasatta/elementsd"
documentation = "https://docs.rs/elementsd/"

[dependencies]
bitcoind = "0.34.0"

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
bitcoin_hashes = { version = "0.12.0", optional = true }
flate2 = { version = "1.0", optional = true }
minreq = { version = "2.6.0", default-features = false, features = ["https"], optional = true }
tar = { version = "0.4", optional = true }

[features]
download = [ "bitcoin_hashes", "flate2", "minreq", "tar" ]
"22_1_1" = [ "download", "0_21_0" ]
"0_21_0" = [ "download", "0_18_1_12" ]
"0_18_1_12" = [ "download" ]

bitcoind_25_1 = ["bitcoind/25_1"]
bitcoind_25_0 = ["bitcoind/25_0"]
bitcoind_24_0_1 = ["bitcoind/24_0_1"]
bitcoind_23_1 = ["bitcoind/23_1"]
bitcoind_22_1 = ["bitcoind/22_1"]
bitcoind_0_21_2 = ["bitcoind/0_21_2"]
bitcoind_0_19_1 = ["bitcoind/0_19_1"]
bitcoind_0_18_1 = ["bitcoind/0_18_1"]
bitcoind_0_17_1 = ["bitcoind/0_17_1"]

"doc" = [] # used only for documentation building


[package.metadata.docs.rs]
features = ["download", "doc"]
rustdoc-args = ["--cfg", "docsrs"]
